Extend books api and openapi.yml with PUT endpoint (#23)
* Add tests/logic for PUT request to update book object

* Add tests/logic to check request body and content type header

* Update openapi.yml with PUT /books/{id} endpoint

---------
